--- a/responsive-site.html
+++ b/responsive-site.html
@@ -1,14 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Codeup Design</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Codeup Design</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-project
+<!--<div class="container">-->
+<!--  <nav class="navbar navbar-expand-md navbar-light">-->
+<!--    <img id="nav-image" alt="codeupLogo" src="./images/logo.png">-->
+<!--    <a href="#" class="navbar-brand">codeup design</a>-->
+<!--    <button-->
+<!--            class="navbar-toggler"-->
+<!--            type="button"-->
+<!--            data-bs-toggle="collapse"-->
+<!--            data-bs-target="#toggleMobileMenu"-->
+<!--            aria-controls="toggleMobileMenu"-->
+<!--            aria-expanded="false"-->
+<!--            aria-label="Toggle navigation"-->
+<!--    >-->
+<!--      <span class="navbar-toggler-icon"></span>-->
+<!--    </button>-->
+<!--    <div class="collapse navbar-collapse" id="toggleMobileMenu">-->
+<!--      <ul class="navbar-nav">-->
+<!--        <li>-->
+<!--          <a class="nav-link" href="#">SERVICE</a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a class="nav-link" href="#">WORK</a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a class="nav-link" href="#">BLOG</a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a class="nav-link" href="#">CONTACT</a>-->
+<!--        </li>-->
+<!--      </ul>-->
+<!--    </div>-->
+<!--  </nav>-->
+<!--</div>-->
 
+
+<div class="nav-container">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <img id="nav-image" src="./images/logo.png">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">codeup design<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">SERVICE</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">WORK</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">BLOG</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">CONTACT</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 text-center col-12">
+            <h1 class="font-weight-bold">VISUAL DESIGN & WEB DEVELOPMENT</h1>
+            <h2 class="font-weight-bold">FROM PARK CITY, UTAH</h2>
+        </div>
+      <div class="test rounded-circle font-weight-bold">
+          DESIGN
+      </div>
+    </div>
+</div>
 </body>
 </html>
