made a dvv #circles

--- a/responsive-site.html
+++ b/responsive-site.html
@@ -78,9 +78,20 @@
             <h1 class="font-weight-bold">VISUAL DESIGN & WEB DEVELOPMENT</h1>
             <h2 class="font-weight-bold">FROM PARK CITY, UTAH</h2>
         </div>
-      <div class="test rounded-circle font-weight-bold">
+        <div id="circles">
+      <div id="design" class="test rounded-circle font-weight-bold">
           DESIGN
       </div>
+        <div id="develop" class="test rounded-circle font-weight-bold">
+            DEVELOP
+        </div>
+        <div id="support" class="test rounded-circle font-weight-bold">
+            SUPPORT
+        </div>
+        <div id="host" class="test rounded-circle font-weight-bold">
+            HOST
+        </div>
+        </div>
     </div>
 </div>
 </body>
