--- a/responsive-site.html
+++ b/responsive-site.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Codeup Design</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -72,25 +74,106 @@
         </div>
     </nav>
 </div>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-12 text-center col-12">
-            <h1 class="font-weight-bold">VISUAL DESIGN & WEB DEVELOPMENT</h1>
+<!--<div class="container-fluid">-->
+<!--    <div class="row">-->
+<!--        <div class="col-sm-12 text-center col-12">-->
+<!--            <h1 class="font-weight-bold">VISUAL DESIGN & WEB DEVELOPMENT</h1>-->
+<!--            <h2 class="font-weight-bold">FROM PARK CITY, UTAH</h2>-->
+<!--        </div>-->
+<!--        <div id="circles">-->
+<!--      <div id="design" class="test rounded-circle font-weight-bold">-->
+<!--          DESIGN-->
+<!--      </div>-->
+<!--        <div id="develop" class="test rounded-circle font-weight-bold">-->
+<!--            DEVELOP-->
+<!--        </div>-->
+<!--        <div id="support" class="test rounded-circle font-weight-bold">-->
+<!--            SUPPORT-->
+<!--        </div>-->
+<!--        <div id="host" class="test rounded-circle font-weight-bold">-->
+<!--            HOST-->
+<!--        </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<div class="container-fluid px-0 mx-auto body-div">
+    <div class="row mx-auto">
+        <div class="col-12 col-sm-12 mx-auto text-center mb-sm-4">
+            <h1 class="font-weight-bold mb-sm-4">VISUAL DESIGN & WEB DEVELOPMENT</h1>
             <h2 class="font-weight-bold">FROM PARK CITY, UTAH</h2>
         </div>
-        <div id="circles">
-      <div id="design" class="test rounded-circle font-weight-bold">
-          DESIGN
-      </div>
-        <div id="develop" class="test rounded-circle font-weight-bold">
-            DEVELOP
+        <div class="row mx-auto text-white justify-content-center circle-border">
+            <div class="font-weight-bold my-circle text-center design">
+                <div class="center-text">
+                    DESIGN
+                </div>
+            </div>
+            <div class="font-weight-bold my-circle develop">
+                <div class="center-text">
+                    DEVELOP
+                </div>
+            </div>
+            <div class="line-break d-block d-sm-none">
+            </div>
+            <div class="font-weight-bold my-circle support">
+                <div class="center-text">
+                    SUPPORT
+                </div>
+            </div>
+
+            <div class="font-weight-bold my-circle host">
+                <div class="center-text">
+                    HOST
+                </div>
+            </div>
         </div>
-        <div id="support" class="test rounded-circle font-weight-bold">
-            SUPPORT
+    </div>
+</div>
+<div id="selected-work">SELECTED WORK
+</div>
+<div class="container">
+    <img src="./images/apple-ipad.jpg" alt="apple laptop" class="container-fluid p-0">
+    <div class="under-the-picture">
+        <div>FEATURED PROJECTS</div>
+        <div class="circles">
+            <div class="redCircle smallCircle">D</div>
+            <div class="orangeCircle smallCircle">D</div>
+            <div class="greenCircle smallCircle">S</div>
+            <div class="blueCircle smallCircle">H</div>
         </div>
-        <div id="host" class="test rounded-circle font-weight-bold">
-            HOST
+    </div>
+</div>
+<div class="container">
+    <img src="./images/macbook.jpg" alt="apple laptop" class="container-fluid p-0">
+    <div class="under-the-picture">
+        <div>FEATURED PROJECTS</div>
+        <div class="circles">
+            <div class="redCircle smallCircle">D</div>
+            <div class=" orangeCircle smallCircle">D</div>
+            <div class="greenCircle smallCircle">S</div>
+            <div class="blueCircle smallCircle">H</div>
         </div>
+    </div>
+</div>
+<img src="./images/man.jpg" alt="apple laptop" class="container-fluid p-0">
+<div class="under-the-picture">
+    <div>FEATURED PROJECTS</div>
+    <div class="circles">
+        <div class="redCircle smallCircle">D</div>
+        <div class="orangeCircle smallCircle">D</div>
+        <div class="greenCircle smallCircle">S</div>
+        <div class="blueCircle smallCircle">H</div>
+    </div>
+</div>
+<div class="container">
+    <img src="./images/security.jpg" alt="apple laptop" class="container-fluid p-0">
+    <div class="under-the-picture">
+        <div>FEATURED PROJECTS</div>
+        <div class="circles">
+            <div class="redCircle smallCircle">D</div>
+            <div class="orangeCircle smallCircle">D</div>
+            <div class="greenCircle smallCircle">S</div>
+            <div class="blueCircle smallCircle">H</div>
         </div>
     </div>
 </div>
