updates on selected work

--- a/responsive-site.html
+++ b/responsive-site.html
@@ -105,11 +105,13 @@
         <div class="row mx-auto text-white justify-content-center circle-border">
             <div class="font-weight-bold my-circle text-center design">
                 <div class="center-text">
+                    <br>
                     DESIGN
                 </div>
             </div>
             <div class="font-weight-bold my-circle develop">
                 <div class="center-text">
+                    <br>
                     DEVELOP
                 </div>
             </div>
@@ -117,63 +119,72 @@
             </div>
             <div class="font-weight-bold my-circle support">
                 <div class="center-text">
+                    <br>
                     SUPPORT
                 </div>
             </div>
-
             <div class="font-weight-bold my-circle host">
                 <div class="center-text">
+                    <br>
                     HOST
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div id="selected-work">SELECTED WORK
-</div>
-<div class="container">
-    <img src="./images/apple-ipad.jpg" alt="apple laptop" class="container-fluid p-0">
-    <div class="under-the-picture">
-        <div>FEATURED PROJECTS</div>
-        <div class="circles">
-            <div class="redCircle smallCircle">D</div>
-            <div class="orangeCircle smallCircle">D</div>
-            <div class="greenCircle smallCircle">S</div>
-            <div class="blueCircle smallCircle">H</div>
+
+<div class="selected-work" style="border-top: solid 5px #b9b7b7; width:80%">
+    <div id="selected-work" class="text-center">SELECTED WORK
+    </div>
+    <div class="container">
+        <img src="./images/apple-ipad.jpg" alt="apple laptop" class="container-fluid p-0"
+             style="border: 5px solid #b9b7b7">
+        <div class="under-the-picture">
+            <div>FEATURED PROJECTS</div>
+            <div class="circles">
+                <div class="redCircle smallCircle">D</div>
+                <div class="orangeCircle smallCircle">D</div>
+                <div class="greenCircle smallCircle">S</div>
+                <div class="blueCircle smallCircle">H</div>
+            </div>
         </div>
     </div>
-</div>
-<div class="container">
-    <img src="./images/macbook.jpg" alt="apple laptop" class="container-fluid p-0">
-    <div class="under-the-picture">
-        <div>FEATURED PROJECTS</div>
-        <div class="circles">
-            <div class="redCircle smallCircle">D</div>
-            <div class=" orangeCircle smallCircle">D</div>
-            <div class="greenCircle smallCircle">S</div>
-            <div class="blueCircle smallCircle">H</div>
+    <div class="container">
+        <img src="./images/macbook.jpg" alt="apple laptop" class="container-fluid p-0"
+             style="border: 5px solid #b9b7b7">
+        <div class="under-the-picture">
+            <div>FEATURED PROJECTS</div>
+            <div class="circles">
+                <div class="redCircle smallCircle">D</div>
+                <div class=" orangeCircle smallCircle">D</div>
+                <div class="greenCircle smallCircle">S</div>
+                <div class="blueCircle smallCircle">H</div>
+            </div>
         </div>
     </div>
-</div>
-<img src="./images/man.jpg" alt="apple laptop" class="container-fluid p-0">
-<div class="under-the-picture">
-    <div>FEATURED PROJECTS</div>
-    <div class="circles">
-        <div class="redCircle smallCircle">D</div>
-        <div class="orangeCircle smallCircle">D</div>
-        <div class="greenCircle smallCircle">S</div>
-        <div class="blueCircle smallCircle">H</div>
+    <div class="container">
+        <img src="./images/man.jpg" alt="apple laptop" class="container-fluid p-0" style="border: 5px solid #b9b7b7">
+        <div class="under-the-picture">
+            <div>FEATURED PROJECTS</div>
+            <div class="circles">
+                <div class="redCircle smallCircle">D</div>
+                <div class="orangeCircle smallCircle">D</div>
+                <div class="greenCircle smallCircle">S</div>
+                <div class="blueCircle smallCircle">H</div>
+            </div>
+        </div>
     </div>
-</div>
-<div class="container">
-    <img src="./images/security.jpg" alt="apple laptop" class="container-fluid p-0">
-    <div class="under-the-picture">
-        <div>FEATURED PROJECTS</div>
-        <div class="circles">
-            <div class="redCircle smallCircle">D</div>
-            <div class="orangeCircle smallCircle">D</div>
-            <div class="greenCircle smallCircle">S</div>
-            <div class="blueCircle smallCircle">H</div>
+    <div class="container">
+        <img src="./images/security.jpg" alt="apple laptop" class="container-fluid p-0"
+             style="border: solid 5px  #b9b7b7">
+        <div class="under-the-picture">
+            <div>FEATURED PROJECTS</div>
+            <div class="circles">
+                <div class="redCircle smallCircle">D</div>
+                <div class="orangeCircle smallCircle">D</div>
+                <div class="greenCircle smallCircle">S</div>
+                <div class="blueCircle smallCircle">H</div>
+            </div>
         </div>
     </div>
 </div>
