--- a/responsive-site.html
+++ b/responsive-site.html
@@ -115,7 +115,7 @@
                     DEVELOP
                 </div>
             </div>
-            <div class="line-break d-block d-sm-none">
+            <div class="line-break  d-none d-sm-none d-md-block">
             </div>
             <div class="font-weight-bold my-circle support">
                 <div class="center-text">
@@ -136,63 +136,70 @@
 <div class="selected-work container-fluid px-0 mx-auto" style="border-top: solid 5px #b9b7b7; width:80%">
     <div class="col-12">
         <div class="row">
-            <div class="container for left side col-8">
+            <div class="container col-8">
                 <div id="selected-work" class="text-center" style="padding: 1em">SELECTED WORK</div>
-
-                <div class="container">
-                    <img src="./images/apple-ipad.jpg" alt="apple laptop" class="container-fluid p-0"
-                         style="border: 5px solid #b9b7b7">
-                    <div class="under-the-picture">
-                        <div>FEATURED PROJECTS</div>
-                        <div class="circles">
-                            <div class="redCircle smallCircle">D</div>
-                            <div class="orangeCircle smallCircle">D</div>
-                            <div class="greenCircle smallCircle">S</div>
-                            <div class="blueCircle smallCircle">H</div>
+                <div class="test row">
+                    <!--                <div class="couple-images col-4 container-fluid p-0">-->
+                    <div class="container-fluid col">
+                        <img src="./images/apple-ipad.jpg" alt="apple laptop" class="image container p-0"
+                             style="border: 5px solid #b9b7b7; object-fit: cover">
+                        <div class="under-the-picture container-fluid p-0">
+                            <div class="featured-projects">FEATURED PROJECTS</div>
+                            <div class="circles">
+                                <div class="redCircle smallCircle">D</div>
+                                <div class="orangeCircle smallCircle">D</div>
+                                <div class="greenCircle smallCircle">S</div>
+                                <div class="blueCircle smallCircle">H</div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="container">
-                    <img src="./images/macbook.jpg" alt="apple laptop" class="container-fluid p-0"
-                         style="border: 5px solid #b9b7b7">
-                    <div class="under-the-picture">
-                        <div>FEATURED PROJECTS</div>
-                        <div class="circles">
-                            <div class="redCircle smallCircle">D</div>
-                            <div class=" orangeCircle smallCircle">D</div>
-                            <div class="greenCircle smallCircle">S</div>
-                            <div class="blueCircle smallCircle">H</div>
+                    <div class="container col">
+                        <img src="./images/macbook.jpg" alt="apple laptop" class="image container p-0"
+                             style="border: 5px solid #b9b7b7">
+                        <div class="under-the-picture">
+                            <div class="featured-projects">FEATURED PROJECTS</div>
+                            <div class="circles">
+                                <div class="redCircle smallCircle">D</div>
+                                <div class=" orangeCircle smallCircle">D</div>
+                                <div class="greenCircle smallCircle">S</div>
+                                <div class="blueCircle smallCircle">H</div>
+                            </div>
+                            <!--                        </div>-->
                         </div>
                     </div>
-                </div>
-                <div class="container">
-                    <img src="./images/man.jpg" alt="apple laptop" class="container-fluid p-0"
-                         style="border: 5px solid #b9b7b7">
-                    <div class="under-the-picture">
-                        <div>FEATURED PROJECTS</div>
-                        <div class="circles">
-                            <div class="redCircle smallCircle">D</div>
-                            <div class="orangeCircle smallCircle">D</div>
-                            <div class="greenCircle smallCircle">S</div>
-                            <div class="blueCircle smallCircle">H</div>
+                    <div class="w-100"></div>
+                    <!--                <div class="couple-images col-4 container-fluid p-0">-->
+                    <div class="container col">
+                        <img src="./images/man.jpg" alt="apple laptop" class="image container p-0"
+                             style="border: 5px solid #b9b7b7">
+                        <div class="under-the-picture">
+                            <div class="featured-projects">FEATURED PROJECTS</div>
+                            <div class="circles">
+                                <div class="redCircle smallCircle">D</div>
+                                <div class="orangeCircle smallCircle">D</div>
+                                <div class="greenCircle smallCircle">S</div>
+                                <div class="blueCircle smallCircle">H</div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="container">
-                    <img src="./images/security.jpg" alt="apple laptop" class="container-fluid p-0"
-                         style="border: solid 5px  #b9b7b7">
-                    <div class="under-the-picture">
-                        <div>FEATURED PROJECTS</div>
-                        <div class="circles">
-                            <div class="redCircle smallCircle">D</div>
-                            <div class="orangeCircle smallCircle">D</div>
-                            <div class="greenCircle smallCircle">S</div>
-                            <div class="blueCircle smallCircle">H</div>
+                    <div class="container col">
+                        <img src="./images/security.jpg" alt="apple laptop" class="image container p-0"
+                             style="border: solid 5px  #b9b7b7">
+                        <div class="under-the-picture">
+                            <div class="featured-projects">FEATURED PROJECTS</div>
+                            <div class="circles">
+                                <div class="redCircle smallCircle">D</div>
+                                <div class="orangeCircle smallCircle">D</div>
+                                <div class="greenCircle smallCircle">S</div>
+                                <div class="blueCircle smallCircle">H</div>
+                            </div>
                         </div>
                     </div>
+                    <!--                </div>-->
                 </div>
             </div>
-<!--           right  sidebar-->
+            <!--           right  sidebar-->
+
             <div class="right-side-text d-none d-sm-none d-md-none d-lg-block col-4">
                 <div class="text-center" style="padding: 1em">THE LAST</div>
                 <div class="image-plus-text">
