--- a/responsive-site.html
+++ b/responsive-site.html
@@ -103,37 +103,48 @@
             <h2 class="font-weight-bold">FROM PARK CITY, UTAH</h2>
         </div>
         <div class="row mx-auto text-white justify-content-center circle-border">
-            <div class="font-weight-bold my-circle text-center design">
-                <div class="center-text">
-                    <br>
-                    DESIGN
+            <div class="row mx-auto justify-content-center">
+                <div class="div-circle" id="design1">
+                    <div class=" font-weight-bold my-circle text-center design">
+                        <div class="center-text">
+                            <br>
+                            DESIGN
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="font-weight-bold my-circle develop">
-                <div class="center-text">
-                    <br>
-                    DEVELOP
+                <div class="div-circle">
+                    <div class="font-weight-bold my-circle develop">
+                        <div class="center-text">
+                            <br>
+                            DEVELOP
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="line-break  d-none d-sm-none d-md-block">
-            </div>
-            <div class="font-weight-bold my-circle support">
-                <div class="center-text">
-                    <br>
-                    SUPPORT
+<!--                <div class="w-100"></div>-->
+<!--                            <div class="line-break ">-->
+                <div class="div-circle" id="support1">
+                    <div class="font-weight-bold my-circle support">
+                        <div class="center-text">
+                            <br>
+                            SUPPORT
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="font-weight-bold my-circle host">
-                <div class="center-text">
-                    <br>
-                    HOST
+                <div class="div-circle">
+
+                    <div class="font-weight-bold my-circle host">
+                        <div class="center-text">
+                            <br>
+                            HOST
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="selected-work container-fluid px-0 mx-auto" style="border-top: solid 5px #b9b7b7; width:80%">
+<div class="selected-work container-fluid px-0 mx-auto" style="border-top: solid 5px #c7c6c6; width:80%">
     <div class="col-12">
         <div class="row">
             <div class="container col-8">
