updates on small circles

--- a/responsive-site.html
+++ b/responsive-site.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Codeup Design</title>
+    <link rel="icon" href="./images/favicon (1).ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -107,7 +108,6 @@
                 <div class="div-circle" id="design1">
                     <div class=" font-weight-bold my-circle text-center design">
                         <div class="center-text">
-                            <br>
                             DESIGN
                         </div>
                     </div>
@@ -115,7 +115,6 @@
                 <div class="div-circle">
                     <div class="font-weight-bold my-circle develop">
                         <div class="center-text">
-                            <br>
                             DEVELOP
                         </div>
                     </div>
@@ -125,7 +124,6 @@
                 <div class="div-circle" id="support1">
                     <div class="font-weight-bold my-circle support">
                         <div class="center-text">
-                            <br>
                             SUPPORT
                         </div>
                     </div>
@@ -134,7 +132,6 @@
 
                     <div class="font-weight-bold my-circle host">
                         <div class="center-text">
-                            <br>
                             HOST
                         </div>
                     </div>
@@ -144,7 +141,7 @@
     </div>
 </div>
 
-<div class="selected-work container-fluid px-0 mx-auto" style="border-top: solid 5px #c7c6c6; width:80%">
+<div class="selected-work container-fluid px-0 mx-auto" style="border-top: solid 2px #c7c6c6; width:80%">
     <div class="col-12">
         <div class="row">
             <div class="container col-8">
