update on small pictures

--- a/responsive-site.html
+++ b/responsive-site.html
@@ -212,25 +212,25 @@
                 <div class="text-center" style="padding: 1em">THE LAST</div>
                 <div class="image-plus-text">
                     <div class="right-side-images">
-                        <img src="./images/mobile-phone.jpg" alt="apple laptop" class="container-fluid p-0">
+                        <img src="./images/mobile-phone.jpg" alt="apple laptop" class="small-pictures container-fluid p-0">
                     </div>
-                    <div class="font-weight-bold">
+                    <div class="anton font-weight-bold">
                         THE ADMIN BAR AND ABSOLUTE POSITIONING
                     </div>
                 </div>
                 <div class="image-plus-text">
                     <div class="right-side-images">
-                        <img src="./images/head.jpg" alt="apple laptop" class="container-fluid p-0">
+                        <img src="./images/head.jpg" alt="apple laptop" class="small-pictures container-fluid p-0">
                     </div>
-                    <div class="font-weight-bold">
+                    <div class="anton font-weight-bold">
                         NIBBLER AWESOME WEBSITE TESTING
                     </div>
                 </div>
                 <div class="image-plus-text">
                     <div class="right-side-images">
-                        <img src="./images/ipad.jpg" alt="apple laptop" class="container-fluid p-0">
+                        <img src="./images/ipad.jpg" alt="apple laptop" class="small-pictures container-fluid p-0">
                     </div>
-                    <div class="font-weight-bold">
+                    <div class="anton font-weight-bold">
                         HOW TO GET GOOGLE TO LIKE YOU
                     </div>
                 </div>
